# sports-reco

./: .gitignore  README.md  pyproject.toml
src/sports_reco/: __init__.py  recommender.py
